[gd_scene load_steps=15 format=3 uid="uid://b74bwsufd7gd3"]

[ext_resource type="Script" uid="uid://b0ccor8t3o4cp" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://cf04cjuhj6sc7" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://d3upw2unx838t" path="res://mob.tscn" id="2_h2yge"]
[ext_resource type="FontFile" uid="uid://cyxhh7ddkn62q" path="res://fonts/Montserrat-Medium.ttf" id="4_lquwl"]
[ext_resource type="Script" uid="uid://dss3qp2ysu7cb" path="res://score_label.gd" id="5_7mycd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7dm0k"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_7dm0k"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
albedo_color = Color(0.986979, 0.667345, 0, 1)
roughness = 0.45

[sub_resource type="CylinderMesh" id="CylinderMesh_ig7tw"]
material = SubResource("StandardMaterial3D_ig7tw")

[sub_resource type="Curve3D" id="Curve3D_ig7tw"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13, 0, -15, 0, 0, 0, 0, 0, 0, 13, 0, -15, 0, 0, 0, 0, 0, 0, 13, 0, 15, 0, 0, 0, 0, 0, 0, -13, 0, 15),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="Theme" id="Theme_272bh"]
default_font = ExtResource("4_lquwl")
default_font_size = 30

[sub_resource type="Animation" id="Animation_lquwl"]
resource_name = "Show"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7mycd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_272bh"]
_data = {
&"RESET": SubResource("Animation_7mycd"),
&"Show": SubResource("Animation_lquwl")
}

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_h2yge")

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_7dm0k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_7dm0k")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 21, 0)
light_energy = 2.0
shadow_enabled = true

[node name="Player" parent="." node_paths=PackedStringArray("bounding_path") instance=ExtResource("1_ig7tw")]
unique_name_in_owner = true
bounding_path = NodePath("../SpawnPath")

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0
far = 100.0

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, -15)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 15)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 15)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -15)
mesh = SubResource("CylinderMesh_ig7tw")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_ig7tw")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -13, 0, -15)

[node name="MobTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_272bh")

[node name="Retry" type="CanvasLayer" parent="UserInterface"]
unique_name_in_owner = true
layer = -1

[node name="ColorRect" type="ColorRect" parent="UserInterface/Retry"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="UserInterface/Retry/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -14.0
offset_right = 107.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_272bh")
text = "Press Enter to retry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasModulate" type="CanvasModulate" parent="UserInterface/Retry"]
color = Color(1, 1, 1, 0)

[node name="RetryLayerAnimation" type="AnimationPlayer" parent="UserInterface/Retry"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_272bh")
}

[node name="ScoreLabel" type="Label" parent="UserInterface"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 49.0
offset_top = 39.0
offset_right = 110.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
text = "Score: 0"
script = ExtResource("5_7mycd")

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
